[gd_scene load_steps=8 format=3 uid="uid://dejbavhv40dwm"]

[ext_resource type="Script" path="res://Scenes/game_ui.gd" id="1_aveey"]
[ext_resource type="FontFile" uid="uid://4i0nhct1085b" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="2_prb7u"]
[ext_resource type="AudioStream" uid="uid://bhxp31bm2ck1v" path="res://assets/audio/jazzyfrenchy.mp3" id="4_0v0gu"]

[sub_resource type="LabelSettings" id="LabelSettings_4clx5"]
font = ExtResource("2_prb7u")
font_size = 24
font_color = Color(0.864432, 0.418601, 0.388168, 1)
shadow_size = 7
shadow_color = Color(0, 0, 0, 0.721569)

[sub_resource type="LabelSettings" id="LabelSettings_tj8xl"]
font = ExtResource("2_prb7u")
font_size = 24
font_color = Color(0.864432, 0.418601, 0.388168, 1)
shadow_size = 7
shadow_color = Color(0, 0, 0, 0.721569)

[sub_resource type="LabelSettings" id="LabelSettings_7jxs0"]
font = ExtResource("2_prb7u")
font_size = 48
font_color = Color(0.862745, 0.419608, 0.388235, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.721569)

[sub_resource type="LabelSettings" id="LabelSettings_cwxoy"]
font = ExtResource("2_prb7u")
font_size = 48
font_color = Color(0.862745, 0.419608, 0.388235, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.721569)

[node name="GameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_aveey")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1"
label_settings = SubResource("LabelSettings_4clx5")

[node name="AttemtpsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Attempts
"
label_settings = SubResource("LabelSettings_tj8xl")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CompleteLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "LEVEL COMPLETE"
label_settings = SubResource("LabelSettings_7jxs0")

[node name="PressSpaceLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "PRESS SPACE"
label_settings = SubResource("LabelSettings_cwxoy")

[node name="GameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0v0gu")
